feat: Implement progressive difficulty and boss scaling
Introduce dynamic difficulty scaling for enemies and bosses based on game level. Bosses now have increased HP and speed with each encounter. Also, disable default mobile touch actions to prevent interference with game controls.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         background-color: #111;
         color: white;
         overflow: hidden;
+        touch-action: none; /* Prevents scroll/zoom on mobile */
       }
     </style>
   <script type="importmap">
